# aquarius-cantina-fv

./: .gitignore  Cargo.toml  README.md  update_params.py
access_control/: Cargo.toml
access_control/src/: emergency.rs  lib.rs  management.rs  role.rs  storage.rs  transfer.rs  utils.rs
fees_collector/: Cargo.toml  certora_build.py  justfile
fees_collector/collection/: fees_collector_high_level__collect.json  fees_collector_integrity__collect.json  fees_collector_integrity_address_has_role__collect.json  fees_collector_integrity_role_address_safe__collect.json  fees_collector_integrity_role_address_single__collect.json  fees_collector_permissions_admin_role_management__collect.json  fees_collector_permissions_admin_transfer_deadline_changes_apply_transfer_ownership__collect.json  fees_collector_permissions_admin_transfer_deadline_changes_commit_transfer_ownership__collect.json  fees_collector_permissions_emergency_and_upgrades__collect.json  fees_collector_permissions_future_addresses__collect.json  fees_collector_permissions_future_admin_changes_apply_transfer_ownership__collect.json  fees_collector_permissions_future_admin_changes_commit_transfer_ownership__collect.json  fees_collector_permissions_future_em_admin_changes_commit_transfer_ownership__collect.json  fees_collector_permissions_transfer_deadlines__collect.json  fees_collector_sanity__collect.json  fees_collector_state_transition_admin_deadline_lifecycle_apply_transfer_ownership__collect.json  fees_collector_state_transition_admin_deadline_lifecycle_commit_transfer_ownership__collect.json  fees_collector_state_transition_admin_deadline_lifecycle_revert_transfer_ownership__collect.json  fees_collector_state_transition_admin_init_once__collect.json  fees_collector_state_transition_admin_init_once_h_set_role_address__collect.json  fees_collector_state_transition_admin_never_zero__collect.json  fees_collector_state_transition_admin_role_h_set_role_address__collect.json  fees_collector_state_transition_admin_role_transitions__collect.json  fees_collector_state_transition_admin_role_transitions_em__collect.json  fees_collector_state_transition_em_admin_deadline_lifecycle_apply_transfer_ownership__collect.json  fees_collector_state_transition_em_admin_deadline_lifecycle_revert_transfer_ownership__collect.json  fees_collector_state_transition_emergency_admin_role_apply_transfer_ownership__collect.json  fees_collector_state_transition_emergency_mode__collect.json  fees_collector_state_transition_future_admin_consistency_commit_transfer_ownership__collect.json  fees_collector_state_transition_future_em_admin_consistency_commit_transfer_ownership__collect.json  log.txt  (+2 more)
ghost_state/: Cargo.toml
upgrade/: Cargo.toml
(+173 files in other folders)
