[package]
name = "access_control"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[features]
certora = ["ghost_state"]

[dependencies]
soroban-sdk = { workspace = true }
utils = { workspace = true }
liquidity-pool-validation-errors = { workspace = true }
ghost_state = { workspace = true, optional = true }

[dev-dependencies]
utils = { workspace = true, features = ["testutils"] }