[package]
name = "soroban-fees-collector-contract"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
certora = ["access_control/certora", "upgrade/certora"]

[dependencies]
soroban-sdk = { workspace = true }
access_control = { workspace = true }
upgrade = { workspace = true }
ghost_state = { workspace = true }
paste = "1.0.14"

cvlr = { workspace = true, default-features = false }
cvlr-soroban = { workspace = true }
cvlr-soroban-macros = { workspace = true }
cvlr-soroban-derive = { workspace = true }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
