[package]
name = "ghost_state"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

cvlr = { workspace = true, default-features = false }
cvlr-soroban = { workspace = true }
cvlr-soroban-macros = { workspace = true }
cvlr-soroban-derive = { workspace = true }