[package]
name = "upgrade"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true


[lib]
crate-type = ["rlib"]
doctest = false

[features]
certora = ["ghost_state"]

[dependencies]
soroban-sdk = { workspace = true }
access_control = { workspace = true}
utils = { workspace = true }
ghost_state = { workspace = true, optional = true }
